{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 132,
  "lineage": "60bb2781-df01-e48b-0442-756d0729045d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:621554089814:internet-gateway/igw-0118acd624892edeb",
            "id": "igw-0118acd624892edeb",
            "owner_id": "621554089814",
            "tags": {
              "Name": "Core_Internet_Gatway"
            },
            "tags_all": {
              "Name": "Core_Internet_Gatway"
            },
            "vpc_id": "vpc-07c84dc8e442ae562"
          },
          "dependencies": [
            "aws_vpc.core_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "core_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:621554089814:network-acl/acl-01a453bb3994acaff",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-01a453bb3994acaff",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "104.175.10.116/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "owner_id": "621554089814",
            "subnet_ids": [],
            "tags": {
              "Name": "core_acl"
            },
            "tags_all": {
              "Name": "core_acl"
            },
            "vpc_id": "vpc-07c84dc8e442ae562"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.core_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "aws_networl_acl_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0936b711a68e1da7a",
            "network_acl_id": "acl-01a453bb3994acaff",
            "subnet_id": "subnet-061d9667d823126ca"
          },
          "dependencies": [
            "aws_network_acl.core_acl",
            "aws_subnet.master",
            "aws_vpc.core_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "core_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:621554089814:route-table/rtb-081d7fc6fefe48180",
            "id": "rtb-081d7fc6fefe48180",
            "owner_id": "621554089814",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0118acd624892edeb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "core-rt"
            },
            "tags_all": {
              "Name": "core-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c84dc8e442ae562"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.core_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "core_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0909a70eef10afa3c",
            "route_table_id": "rtb-081d7fc6fefe48180",
            "subnet_id": "subnet-061d9667d823126ca"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.core_rt",
            "aws_subnet.master",
            "aws_vpc.core_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:621554089814:security-group/sg-042140271887bc4eb",
            "description": "Security group will allow all traffic outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042140271887bc4eb",
            "ingress": [],
            "name": "allow_all_egress",
            "name_prefix": "",
            "owner_id": "621554089814",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_outbound"
            },
            "tags_all": {
              "Name": "allow_all_outbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c84dc8e442ae562"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.core_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_allow_ssh_core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:621554089814:security-group/sg-0c0e3d5421b22222e",
            "description": "Security group will allow ssh traffic locally",
            "egress": [],
            "id": "sg-0c0e3d5421b22222e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.5.5.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_traffic_local",
            "name_prefix": "",
            "owner_id": "621554089814",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_core"
            },
            "tags_all": {
              "Name": "allow_ssh_core"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c84dc8e442ae562"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.core_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_allow_ssh_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:621554089814:security-group/sg-08081e54547d8ac00",
            "description": "Allows ssh traffic inbound from personal site",
            "egress": [],
            "id": "sg-08081e54547d8ac00",
            "ingress": [
              {
                "cidr_blocks": [
                  "104.175.10.116/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_inbound_ssh_site",
            "name_prefix": "",
            "owner_id": "621554089814",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_site"
            },
            "tags_all": {
              "Name": "allow_ssh_site"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c84dc8e442ae562"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.core_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:621554089814:subnet/subnet-061d9667d823126ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061d9667d823126ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "621554089814",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "master-subnet"
            },
            "tags_all": {
              "Name": "master-subnet"
            },
            "vpc_id": "vpc-07c84dc8e442ae562"
          },
          "dependencies": [
            "aws_vpc.core_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "core_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:621554089814:vpc/vpc-07c84dc8e442ae562",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c996857c068c4575",
            "default_route_table_id": "rtb-0d41a82c95fcff4b8",
            "default_security_group_id": "sg-022df04ed5c101878",
            "dhcp_options_id": "dopt-0c1bd616a6cb7d2a2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c84dc8e442ae562",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d41a82c95fcff4b8",
            "owner_id": "621554089814",
            "tags": {
              "Name": "Private Control VPC"
            },
            "tags_all": {
              "Name": "Private Control VPC"
            }
          }
        }
      ]
    }
  ]
}